Fix - Margin value for alignfull

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -173,8 +173,8 @@
 	}
 	.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
 	.no-sidebar.boxed #primary .entry-content > .alignfull {
-		margin-left: -30px;
-		margin-right: -30px;
+		margin-left: -15px;
+		margin-right: -15px;
 	}
 }
 
