--- a/style.css
+++ b/style.css
@@ -1340,8 +1340,8 @@ h3#site-title {
 
 .no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
 .no-sidebar.boxed #primary .entry-content > .alignfull {
-	margin-left: -15px;
-	margin-right: -15px;
+	margin-left: -30px;
+	margin-right: -30px;
 	width: unset;
 }
 
